# TokenDance

./: .gitignore  AGENT.md  AGENTS.md  AGENT_ROBUSTNESS_ASSESSMENT.md  DEVELOPMENT_SUMMARY.md  E2E_TEST_GUIDE.md  FIXES_SUMMARY.md  GETTING_STARTED.md  PHASE3_FRONTEND_GUIDE.md  PROJECT_STATUS.md  QUICKSTART-UI.md  QUICKSTART.md  README.md  RECOMMENDED_SKILLS.md  docker-compose.yml  document-card-preview.html  import_report.json  package-lock.json  package.json  pnpm-lock.yaml  test_report.md  tsconfig.base.json
backend/: .env  .env.example  AGENTS.md  AGENT_ENGINE_README.md  DEVELOPMENT.md  Dockerfile.dev  README.md  alembic.ini  mcp.json  pyproject.toml  test_api_integration.py  test_e2e.py  test_file_ops_tool.py  test_openrouter_connection.py  test_real_llm.py  test_research_agent.py  test_shell_tool.py  test_working_memory.py  update_api_key.sh
backend/alembic/: env.py
backend/alembic.bak/: env.py
backend/alembic/versions/: 20260111_2155_1e4feadf5716_initial_user_and_workspace_models.py  20260112_0800_add_session_message_artifact_skill.py  20260115_1000_add_trust_config.py  20260116_1000_add_multi_tenancy.py  20260116_1200_add_agent_config.py  20260116_1400_add_agent_lessons.py  20260116_1400_add_agent_state.py  20260117_1000_add_multi_provider_auth.py  20260119_0600_add_session_status_running_pending_cancelled.py  20260119_1500_add_uppercase_session_status_values.py  20260119_1544_2601d5d2aaaa_fix_workspace_type_enum_values.py  20260119_1654_e4929bd393e9_add_research_tasks_table.py  20260119_2040_add_lowercase_session_status_values.py  20260119_2055_unify_enum_values_to_lowercase.py  20260121_2312_66425cd35564_add_project_first_architecture_models.py  20260122_0110_add_extra_data_to_conversations.py  20260123_0700_add_message_feedback.py  20260123_2359_62726dc81c01_merge_migration_heads.py  20260124_0005_add_missing_lowercase_enum_values.py  add_multi_turn_conversation.py
backend/app/: main.py
backend/app/agent/: __init__.py  answer_agent.py  base.py  context.py  context_graph_integration.py  context_manager.py  engine.py  execution_context.py  executor.py  hybrid_execution_prompts.py  memory.py  planning_engine.py  prompts.py  retry.py  state.py  task_executor.py  types.py  validator.py  worker.py
backend/app/api/: middleware.py
backend/app/context/: unified_context.py
backend/app/core/: config.py  database.py  datetime_utils.py  dependencies.py  logging.py  redis.py
backend/app/db/: init_llm_providers.py  schema.sql
backend/app/filesystem/: __init__.py  agent_fs.py
backend/app/mcp/: __init__.py  builtin_tools.py  config.py  executor.py  manager.py  protocol.py  registry.py  types.py
backend/app/models/: __init__.py  agent_config.py  agent_lesson.py  agent_state.py  artifact.py  conversation.py  message.py  multi_tenancy.py  organization.py  project.py  project_version.py  research_findings.py  research_task.py  session.py  skill.py  team.py  trust_config.py  turn.py  user.py  user_preference.py  workspace.py
backend/app/monitoring/: __init__.py  execution_stats.py
backend/app/ppt/: __init__.py  generator.py  models.py  template_engine.py
backend/app/repositories/: __init__.py  agent_config_repository.py  agent_state_repository.py  artifact_repository.py  message_repository.py  project_repository.py  session_repository.py  user_repository.py  workspace_repository.py
backend/app/routing/: router.py
backend/app/sandbox/: __init__.py  browser_router.py  confirmation.py  exceptions.py  manager.py  pool.py  risk_policy.py  types.py  workspace.py
backend/app/schemas/: __init__.py  agent_config.py  artifact.py  conversation.py  intent.py  interactive_report.py  message.py  project.py  reasoning_trace.py  session.py  user.py  workspace.py
backend/app/services/: agent_config_service.py  agent_service.py  agent_state_service.py  agent_stop_service.py  auth_service.py  browser_automation.py  code_analyzer.py  conversation_service.py  credibility_scorer.py  document_parser.py  failure_tracker.py  file_indexer.py  findings_extractor.py  gmail_oauth_service.py  hitl_service.py  intent_validation_service.py  object_storage.py  permission_service.py  ppt_renderer.py  preference_learner.py  progressive_summarizer.py  project_service.py  query_analyzer.py  reasoning_trace.py  report_iterator.py  research_memory.py  research_service.py  research_timeline.py  research_to_ppt.py  saturation_detector.py  search_cache.py  session_service.py  sse_event_store.py  sse_token_service.py  time_lapse.py  trust_service.py  vector_indexer.py  wechat_oauth_service.py  workspace_service.py
backend/app/skills/: __init__.py  embedding.py  executor.py  hot_reload.py  loader.py  matcher.py  monitoring.py  registry.py  reranker.py  template_registry.py  types.py
backend/config/: financial_compliance.yaml
backend/examples/: financial_research_demo.py  financial_tools_demo.py  openrouter_example.py
backend/scripts/: __init__.py  check_schema_sync.py  migrate_session_to_project.py  start_agent_worker.py  test_multi_turn_flow.py
backend/tests/: conftest.py  test_agent_engine_complete.py  test_agent_filesystem.py  test_analysis_engine.py  test_basic_agent.py  test_browser_ops.py  test_diagram.py  test_e2e.py  test_execution_monitoring.py  test_execution_router.py  test_file_converter_tool.py  test_file_ops_tool.py  test_financial_analysis_api.py  test_financial_api.py  test_financial_quick.py  test_financial_research_skill.py  test_five_rules_integration.py  test_models_init.py  test_openrouter_connection.py  test_openrouter_llm.py  test_openrouter_multimodal.py  test_output_checker.py  test_phase2_integration.py  test_phase3_agent_integration.py  test_plan_manager.py  test_ppt_generator.py  test_ppt_layered.py  test_qwen_llm.py  test_real_llm.py  test_research_v4.py  test_sentiment_tools.py  test_shell_tool.py  test_siliconflow.py  test_skill_matching_benchmark.py  test_skill_system.py  test_smart_document_converter.py  test_social_crawlers.py  test_three_files.py  test_time_lapse.py  test_vision_router.py  (+4 more)
backend/tests/agent/: test_agent_engine_complete.py  (+8 more)
(+731 files in other folders)
