[project]
name = "tokendance-backend"
version = "0.1.0"
description = "TokenDance - Universal AI Agent Platform Backend"
authors = [{name = "TokenDance Team", email = "team@tokendance.ai"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.30.0",
    "alembic>=1.13.1",
    "pydantic[email]>=2.5.3",
    "pydantic-settings>=2.1.0",
    "redis[hiredis]>=5.0.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "httpx[socks]>=0.26.0",
    "anthropic>=0.8.1",
    "msgpack>=1.0.7",
    "watchdog>=3.0.0",
    "bcrypt<5.0.0",
    "sentence-transformers>=2.2.0",
    # onnxruntime has compatibility issues with Python 3.13 + macOS 12 arm64
    # sentence-transformers works fine without it (just slower)
    "tavily-python>=0.3.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2020.1.16",
    "python-pptx>=0.6.23",
    "Pillow>=10.0.0",
    # MarkItDown - Document to Markdown conversion
    "markitdown>=0.0.2",
    "mammoth>=1.11.0",
    "pdfminer-six>=20260107",
    "openpyxl>=3.1.5",
    "speechrecognition>=3.14.5",
    # Graph RAG (Deep Research v3.0)
    "neo4j>=5.0.0",
    "minio>=7.2.16",
    "duckduckgo-search>=8.1.1",
    "flagembedding>=1.3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "black>=24.1.1",
    "isort>=5.13.2",
    "ruff>=0.1.13",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

# =============================================================================
# Scientific Skills Dependencies (from K-Dense-AI/claude-scientific-skills)
# Install specific groups based on your needs:
#   uv pip install -e ".[science-bio]"      # Bioinformatics
#   uv pip install -e ".[science-chem]"     # Chemistry & Drug Discovery
#   uv pip install -e ".[science-ml]"       # Data Science & ML
#   uv pip install -e ".[science-all]"      # All scientific dependencies
# =============================================================================

# Bioinformatics & Genomics
science-bio = [
    "biopython>=1.83",
    "scanpy>=1.9.6",
    "anndata>=0.10.0",
    "scikit-bio>=0.5.8",
    "gget>=0.28.0",
    "pysam>=0.22.0",
    # "scvi-tools>=1.0.0",  # Heavy dependency, install separately if needed
]

# Chemistry & Drug Discovery
science-chem = [
    "rdkit>=2023.9.1",
    "datamol>=0.12.0",
    # "deepchem>=2.7.0",  # Heavy dependency with TensorFlow
    # "torchdrug>=0.2.0",  # Requires PyTorch
]

# Data Science & Machine Learning
science-ml = [
    "scikit-learn>=1.4.0",
    "statsmodels>=0.14.0",
    "shap>=0.44.0",
    "polars>=0.20.0",
    "umap-learn>=0.5.5",
    # "torch>=2.1.0",  # Large dependency, install separately
    # "transformers>=4.36.0",  # Requires torch
]

# Visualization
science-viz = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "networkx>=3.2.0",
]

# Physics & Materials
science-physics = [
    "sympy>=1.12",
    "astropy>=6.0.0",
    # "pymatgen>=2024.1.0",  # Heavy dependency
    # "qiskit>=1.0.0",  # Quantum computing, install separately
]

# Clinical & Medical
science-clinical = [
    "pydicom>=2.4.0",
    "neurokit2>=0.2.7",
]

# All scientific dependencies (core packages only)
science-all = [
    "biopython>=1.83",
    "scanpy>=1.9.6",
    "anndata>=0.10.0",
    "rdkit>=2023.9.1",
    "datamol>=0.12.0",
    "scikit-learn>=1.4.0",
    "statsmodels>=0.14.0",
    "shap>=0.44.0",
    "polars>=0.20.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "networkx>=3.2.0",
    "sympy>=1.12",
]

# =============================================================================
# Financial Data Tools
# Install with: uv pip install -e ".[finance]"
# =============================================================================
finance = [
    "openbb>=4.0.0",           # OpenBB Platform - Global financial data
    "akshare>=1.14.0",         # A-Stock market data (China)
    "yfinance>=0.2.36",        # Yahoo Finance (backup provider)
    "pandas>=2.0.0",           # Data manipulation
    "mplfinance>=0.12.10b0",   # Financial charts (K-line)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
native-tls = true

# Override to exclude onnxruntime on macOS 12 arm64 (no compatible wheels)
override-dependencies = [
    "onnxruntime ; sys_platform == 'never'",  # effectively exclude it
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=term-missing --cov-report=html -m 'not slow'"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"', run with '-m slow')",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20.0",
]
